--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <version>9.4-1201-jdbc4</version>
         </dependency>
         <!--H2Database>-->
         <dependency>
